Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.11.1
-
-
dd5e7f1a52c51061ad54e870df7f8e04c0f06fbe
Description
When using QDir().absoluteFilePath("assets-library://foo") then it will treat it as being relative to the local file system and return an incorrect path. This goes against the Qt 5.10 behaviour where it was not doing this. Although it is arguably expected, it is used in this manner too much and the Qt resource case is already accounted for.
Attachments
For Gerrit Dashboard: QTBUG-70237 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
244634,10 | Use a more robust test for absolute paths in QDir | 5.12.1 | qt/qtbase | Status: MERGED | +2 | 0 |